<resources>
    <string name="app_name">백신NOW_관리</string>

    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>

    <string name="menu_gallery">게시물 작성</string>

    <string name="menu_slideshow">예약현황</string>

    <string name="btn_usersignup"><u>일반 회원으로 가입하기</u></string>
    <string name="btn_hospitalsignup"><u>기관 회원으로 가입하기</u></string>
    <string name="todo">TODO</string>
    <string name="see_map">지도로 보기</string>
    <string name="total">재고량순</string>
    <string name="distance">거리순</string>
    <string name="example_address">서울특별시 강남구 역삼2동</string>
    <string name="btnsearch">Search</string>
    <string name="btnsignup">signup</string>
    <string name="btnsearch_contents">Search Contents</string>
</resources>