<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_name"
    android:orientation="vertical"
    >
    <include layout="@layout/nav_bar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="-5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/medium"
                android:letterSpacing="-0"
                android:text="@string/total"
                android:textColor="#474747"
                android:textSize="18sp" />

            <Button
                android:id="@+id/distance4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/medium"
                android:letterSpacing="-0"
                android:text="@string/distance"
                android:textColor="#474747"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mapview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/medium"
                android:letterSpacing="-0"
                android:text="@string/see_map"
                android:textColor="#474747"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cursor"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/cursor"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/text"
                android:text="@string/example_address"
                android:textColor="#474747"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/frag_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:fadingEdge="none"
                android:fadingEdgeLength="0dp"
                android:overScrollMode="never" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frag_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:visibility="gone">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:context=".MapsActivity" />
        </LinearLayout>


</LinearLayout>